--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 </head>
 
-<body style="background-color: gray;">
+<body style="background-color: #6c757d!important;">
     <div class="container">
 
         <div class="row rounded">
             <div class="col-12 ">
                 <div class="jumbotron jumbotron-fluid bg-light rounded">
                     <div class=" container d-flex flex-column align-items-center ">
-                        <h1>Rock Paper Scissors</h1>
-                        <p>Please select one of the 'R S P' (press) buttons to play </p>
+                        <h1 class="display-3">Rock Paper Scissors</h1>
+                        <p class="lead">Please select one of the 'R S P' (press) buttons to play </p>
                     </div>
                 </div>
             </div>
@@ -37,7 +37,7 @@
 
                 <!-- cards -->
                 <div class="card">
-                    <img id="player1Img" src="./img/p.png" class="card-img-top" style="width: 200px;height: 150px;">
+                    <img id="player1Img" src="./img/p.png" class="card-img-top" style="width:  250px; height: auto;">
                     <div class="card-body">
                     </div>
                 </div>
@@ -59,7 +59,8 @@
 
                 <!-- cards -->
                 <div class="card">
-                    <img id="player2Img" src="./img/s.png" class="card-img-top" style="width: 200px;height: 150px; transform: rotateY(-180deg);">
+                    <img id="player2Img" src="./img/s.png" class="card-img-top"
+                        style="width: 250px; height: auto; transform: rotateY(-180deg);">
                     <div class="card-body">
                     </div>
                 </div>
